9 May 2005 Laurent Rineau
- new (and last) optimization (for the moment) of Double_map
- added a test for Double_map!
- include/CGAL/Mesher_level.h splitted into:
         include/CGAL/Mesher_level.h
	 include/CGAL/Mesher_level_default_implementations.h
	 include/CGAL/Mesher_level_visitors.h
- new class Combine_mesh_visitor in include/CGAL/Mesher_level_visitors.h

23 March 2005 Laurent Rineau
- conflicts_zone_impl requirements have changed

8 March 2005 Laurent Rineau
- new Double_map.h

28 February 2005 Laurent Rineau
- Added macro CGAL_MESH_2_DEBUG_DRAW and Debug_layer.h in mesh_demo, to debug
calls to widget->redraw(). Not activated by default.

8 February 2005 Laurent Rineau
- CHANGES to Mesher_level:
    - enum Mesher_level_conflict_status instead of std::map<bool, bool>.
    - new template parameters for Mesher_level
    - new Mesher_level function names:
        - Tr& triangulation_ref_impl()
        - Vertex_handle insert_impl(p, z)
        - Zone conflicts_zone_impl(p)
        - void scan_triangulation_impl()
        - bool no_longer_element_to_refine_impl()
        - Element get_next_element_impl()
        - void pop_next_element_impl()
        - Point refinement_point_impl(e)
        - void before_conflicts_impl(e, p)
        - Mesher_level_conflict_status private_test_point_conflict_impl(p, zone)
        - Mesher_level_conflict_status 
            test_point_conflict_from_superior_impl(p, zone)
        - void before_insertion_impl(e, p, zone)
        - void after_insertion_impl(vh)
        - void after_no_insertion_impl(e, p, zone)
    - new class in Mesher_level.h for default implementations:
        - class Triangulation_ref_impl
        - No_private_test_point_conflict
        - No_test_point_conflict_from_superior
        - No_test_point_conflict :
        - No_before_insertion
        - No_after_insertion
        - No_after_no_insertion
        - No_before_after_insertion
    
18 January 2005 Laurent Rineau