@@ -6,6 +6,9 @@
 	 include/CGAL/Mesher_level_default_implementations.h
 	 include/CGAL/Mesher_level_visitors.h
 - new class Combine_mesh_visitor in include/CGAL/Mesher_level_visitors.h
+- fixed a stupid bug introduced 09-Feb-2005 in
+  include/CGAL/Mesh_2/Refine_edges_with_clusters.h
+
 
 23 March 2005 Laurent Rineau
 - conflicts_zone_impl requirements have changed
